# raito-proving-service

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md
.github/workflows/: ci.yml
.sqlx/: query-114f888d20c010ff42f1e7d1192bbb9bce91e582b7f173faa5baab08f4838468.json  query-19964c7b010b71a244229434e4d18b4c179eb4ee57ee437b38d699ba20b4a35c.json  query-432c96713afe4437dd1532a3ef060a2b538f4dfd95e02b1503021ed8c9c6f47f.json  query-43897afe7334cd3d8c0e6d652b3c2755d5f20f09c482f594995ab690a8c57385.json  query-4d133846c30b6d95ac3b0b6105aa7c77bb3ffc1f294d89b68ea666bbebf6f388.json  query-7bde976c5d943a120f40f4b09c63919c1b2f8b9d4bd72881fb607820de3bd6c4.json  query-95215292df68be43992adee45bf0960e0399ab576bd39d08d94d22d99a66bc9e.json  query-a25a86f6821ead3d41933fbba3f74b15f3ccfd64b274bed483940a188ec77b64.json  query-a940a8e4b436bdf6400cae3a4611144dfffb309482bd9c728149e00629ecbf12.json  query-b2fc7c13138a2498c9925bb87c1c88a4d3df9c2bd023991d16d6109611cd755c.json  query-bcc95de2b85a083da8bc30e2994b73f10d35cea5ecf8750cc4db6b163f380e09.json  query-e282a812ae4c7e692b8a263b7c0dc2dda079be22d7c63a0183d4e188515255b2.json  query-e91f0ac0610efe61f098be39eaf993a44aeea93113d5aabab9a971a2ad240677.json
config/: environment.md
data/: mock_blocks.json
data/proofs/: 869122.json  869123.json
migrations/: 001_initial.sql
scripts/: README.md  demo.sh  test_api.sh
src/: database.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  model.rs  store.rs
