[package]
name = "raito-proving-service"
version = "0.1.0"
edition = "2021"
authors = ["Raito Team"]
description = "A trust-minimized backend service for generating and serving STARK proofs for Bitcoin blocks"
license = "MIT"
repository = "https://github.com/keep-starknet-strange/raito-proving-service"

[dependencies]
# HTTP Server
axum = { version = "0.7", features = ["json", "query", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# OpenAPI Documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
axum-test = "14.0"
insta = { version = "1.34", features = ["json"] }
tempfile = "3.8"
